Fix a bug causing the website to display incorrectly on Firefox

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: .75fr 3fr;
+    grid-template-columns: .8fr 3fr;
     grid-template-rows: 1.2fr 1fr 5fr 1fr;
 
     margin: auto;
@@ -91,7 +91,30 @@ aside {
     background-color: var(--dark);
     border-right: 2px solid var(--light);
     border-top: 2px solid var(--light);
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    padding: .5rem;
 }
+aside div.recentArticle {
+    font-size: .6rem;
+    padding: .5rem;
+}
+aside div.recentArticle p {
+    text-indent: 1rem;
+}
+div.recentArticle h4 {
+    margin-bottom: .3rem;
+}
+div.recentArticle h4 a {
+    font-size: .8rem;
+    text-decoration: none;
+    color: whitesmoke;
+}
+div.recentArticle h4 a:hover {
+    color: var(--accentOne);
+}
+
 
 main {
     grid-area: 3 / 2 / 4 / 3;
